compiler/testData/cli/jvm/readingConfigFromEnvironment/simple.kt
fun main() {
    val x = 1 + ""
}
